--- a/config/bakamplayer.ini
+++ b/config/bakamplayer.ini
@@ -60,6 +60,9 @@
     "onTop": "never",
     "recent": [
         {
+            "path": "/mnt/3ADED414DED3C5F3/Anime n Movies/[Reaktor] Cowboy Bebop - Complete [1080p][x265][10-bit][Dual-Audio]/Extra/Cowboy Bebop ED.flac"
+        },
+        {
             "path": "/home/stephen/Music/Your Favorite Martian - Full song collection (2011-2012)/00 Doin' Your Mom (Bonus Track).mp3"
         },
         {
@@ -107,9 +110,6 @@
         {
             "path": "/home/stephen/Downloads/Kyoukai no Kanata Kyoukai no Kanata -I'LL BE HERE- Theme Song/MP3/01. Aitakatta Sora.mp3",
             "time": 240
-        },
-        {
-            "path": "/home/stephen/Music/deemix Music/Tristam - Before We Fade.flac"
         }
     ],
     "remaining": false,
