--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -222,11 +222,13 @@ strip_trailing_spaces smart
 #: clicks (in seconds). Negative numbers will use the system default
 #: instead, if available, or fallback to 0.5.
 detect_urls yes
-mouse_map left click ungrabbed mouse_click_url_or_select
+# mouse_map left click ungrabbed mouse_click_url_or_select
+
+
 include ./theme.conf
-background_image "/home/stephen/Pictures/Wallpapers/905504.png"
-background_image_layout scaled
-background_image_linear no
+# background_image "/home/stephen/Pictures/Wallpapers/905504.png"
+# background_image_layout scaled
+# background_image_linear no
 editor micro
 # startup_session
 map ctrl+shift+v paste_from_clipboard
@@ -837,6 +839,7 @@ kitty_mod ctrl
 #: Clipboard {{{
 
 map kitty_mod+c copy_or_interrupt
+# map kitty_mod+v       scroll_end
 
 #: There is also a copy_or_interrupt action that can be optionally
 #: mapped to Ctrl+c. It will copy only if there is a selection and
@@ -869,10 +872,20 @@ map kitty_mod+c copy_or_interrupt
 # map kitty_mod+down      scroll_line_down
 # map kitty_mod+j         scroll_line_down
 map page_up   scroll_page_up
+map ctrl+s none
 map page_down scroll_page_down
-map home      scroll_home
-map end       scroll_end
+# map home      scroll_home 
+# map end       scroll_end
 map kitty_mod+h         show_scrollback
+# mouse_map ctrl+left click ungrabbed mouse_click_url_or_select
+# mouse_map left            click none
+# mouse_map left            press none
+# mouse_map left            release none
+# mouse_map ctrl+left      click grabbed,ungrabbed mouse_click_url_or_select
+mouse_map left            click ungrabbed,grabbed no_op
+mouse_map ctrl+left click grabbed,ungrabbed
+mouse_click_url_or_select
+# mouse_map ctrl+left release grabbed,ungrabbed mouse_click_url
 
 #: You can pipe the contents of the current screen + history buffer as
 #: STDIN to an arbitrary program using the ``launch`` function. For
