--- a/Dockerfile.ubuntu
+++ b/Dockerfile.ubuntu
@@ -8,7 +8,9 @@ RUN apt update && \
         unzip \ 
         git \ 
         htop \ 
-        micro --yes 
+        micro \
+        nano \ 
+        --yes 
 
 WORKDIR /root
 COPY . /root/
