--- a/plugins.toml
+++ b/plugins.toml
@@ -28,8 +28,8 @@ github = "ohmyzsh/ohmyzsh"
 [plugins.powerlevel10k]
 github = "romkatv/powerlevel10k"
 
-# [plugins.spaceship]
-# github = "spaceship-prompt/spaceship-prompt"
+# [plugins.starship]
+# github = "starship/starship"
 
 
 
