--- a/starshipClean.toml
+++ b/starshipClean.toml
@@ -69,7 +69,7 @@ diverged = "⇡$ahead_count⇣$behind_count"
 # diverged = "⇕⇡⇣"
 up_to_date = ""
 untracked =	"?$count"
-stashed = "$$count"
+stashed = '\$$count'
 modified = "!$count"
 staged = "+$count"
 renamed = "»$count"
