--- a/Preferences.sublime-settings.json
+++ b/Preferences.sublime-settings.json
@@ -1,9 +1,10 @@
 {
-	"font_size": 18,
+	"font_size": 16,
 	"highlight_line": true,
 	"highlight_modified_tabs": true,
 	"scroll_speed": 1.0,
 	"color_scheme": "Packages/Color Scheme - Default/Monokai.sublime-color-scheme",	
-	// "ui_scale": 1.5,
 	"font_face": "MesloLGS NF",
+	"save_on_focus_lost": true,
+	// "ui_scale": 1.5,
 }
