--- a/microSettings.json
+++ b/microSettings.json
@@ -1,58 +1,7 @@
 {
-    "autoclose": true,
-    "autoindent": true,
-    "autosave": 0,
-    "autosu": true,
-    "backup": true,
-    "basename": false,
-    "colorcolumn": 0,
-    "colorscheme": "default",
-    "comment": true,
-    "cursorline": true,
-    "diff": true,
     "diffgutter": true,
-    "encoding": "utf-8",
-    "eofnewline": false,
-    "fastdirty": true,
-    "fileformat": "unix",
-    "filetype": "unknown",
-    "ftoptions": true,
-    "ignorecase": false,
-    "indentchar": " ",
-    "infobar": true,
-    "keepautoindent": false,
     "keymenu": true,
-    "linter": true,
-    "literate": true,
-    "matchbrace": true,
-    "mkparents": false,
-    "mouse": true,
-    "paste": false,
-    "pluginchannels": [
-        "https://raw.githubusercontent.com/micro-editor/plugin-channel/master/channel.json"
-    ],
-    "pluginrepos": [],
-    "readonly": false,
     "rmtrailingws": true,
-    "ruler": true,
     "savecursor": true,
-    "savehistory": true,
-    "saveundo": false,
-    "scrollbar": true,
-    "scrollmargin": 3,
-    "scrollspeed": 2,
-    "smartpaste": true,
-    "softwrap": false,
-    "splitbottom": true,
-    "splitright": true,
-    "status": true,
-    "statusformatl": "$(filename) $(modified)($(line),$(col)) $(status.paste)| ft:$(opt:filetype) | $(opt:fileformat) | $(opt:encoding)",
-    "statusformatr": "$(bind:ToggleKeyMenu): bindings, $(bind:ToggleHelp): help",
-    "statusline": true,
-    "sucmd": "sudo",
-    "syntax": true,
-    "tabmovement": false,
-    "tabsize": 4,
-    "tabstospaces": false,
-    "useprimary": true
+    "scrollbar": true
 }
