--- a/terminator.config
+++ b/terminator.config
@@ -15,17 +15,7 @@
   switch_to_tab_9 = <Alt>9
   switch_to_tab_10 = <Alt>0
 [profiles]
-  [[default]]
-    background_color = "#282828"
-    cursor_blink = False
-    cursor_shape = ibeam
-    cursor_color = "#aaaaaa"
-    font = Monofur Nerd Font 22
-    foreground_color = "#ebdbb2"
-    scrollback_lines = 9999
-    palette = "#282828:#cc241d:#98971a:#d79921:#458588:#b16286:#689d6a:#a89984:#928374:#fb4934:#b8bb26:#fabd2f:#83a598:#d3869b:#8ec07c:#ebdbb2"
-    use_system_font = False
-  [[MonokaiPro]]
+  [[Default]]
     cursor_blink = False
     cursor_shape = ibeam
     cursor_color = "#ffffff"
