--- a/alacritty.yml
+++ b/alacritty.yml
@@ -1,17 +1,17 @@
 font:
   size: 14
   normal:
-    family: "MesloLGS NF"
+    family: "MesloLGS Nerd Font"
     style: Regular
   bold:
-    family: "MesloLGS NF"
+    family: "MesloLGS Nerd Font"
     style: Bold
   italic:
-    family: "MesloLGS NF"
+    family: "MesloLGS Nerd Font"
     style: Italic
   bold_italic:
     style: Bold Italic
-    family: "MesloLGS NF"
+    family: "MesloLGS Nerd Font"
 
 selection:
   save_to_clipboard: true
