--- a/alacritty.yml
+++ b/alacritty.yml
@@ -10,8 +10,8 @@ font:
     family: "MesloLGS Nerd Font"
     style: Italic
   bold_italic:
-    style: Bold Italic
     family: "MesloLGS Nerd Font"
+    style: Bold Italic
 
 selection:
   save_to_clipboard: true
@@ -25,7 +25,43 @@ background_opacity: 0.86
 
 window:
   dynamic_title: true
-  # opacity: 0.8
   padding:
     x: 5
     y: 5
+
+key_bindings:
+  - { key: V,        mods: Control,       action: Paste            }
+  - { key: Return,   mods: Super|Shift,   action: SpawnNewInstance }
+  - { key: PageUp,   mods: Control,       action: ScrollLineUp     }
+  - { key: PageUp,   mods: Control|Shift, action: ScrollLineUp     }
+  - { key: PageDown, mods: Control,       action: ScrollLineDown   }
+  - { key: PageDown, mods: Control|Shift, action: ScrollLineDown   }
+
+# Colors (Monokai Dark)
+colors:
+  # Default colors
+  primary:
+    background: '#272822'
+    foreground: '#F8F8F2'
+
+  # Normal colors
+  normal:
+   black:   '#272822'
+   red:     '#F92672'
+   green:   '#A6E22E'
+   yellow:  '#F4BF75'
+   blue:    '#66D9EF'
+   magenta: '#AE81FF'
+   cyan:    '#A1EFE4'
+   white:   '#F8F8F2'
+
+  # Bright colors
+  bright:
+   black:   '#75715E'
+   red:     '#F92672'
+   green:   '#A6E22E'
+   yellow:  '#F4BF75'
+   blue:    '#66D9EF'
+   magenta: '#AE81FF'
+   cyan:    '#A1EFE4'
+   white:   '#F9F8F5'
