--- a/i3/config
+++ b/i3/config
@@ -32,7 +32,7 @@ set $mod Mod4
 ####################
 # my config
 #####################
-bindsym $mod+Shift+v exec --no-startup-id "copyq toggle"
+# bindsym $mod+Shift+v exec --no-startup-id "copyq toggle"
 bindsym $mod+v exec --no-startup-id "copyq toggle"
 # bindsym $mod+v exec --no-startup-id "copyq toggle"
 
@@ -47,6 +47,7 @@ bindsym Mod4+b split v
 bindsym $mod+Ctrl+1 [class="^discord$"] focus
 bindsym $mod+Ctrl+2 [class="^strawberry$"] focus
 bindsym $mod+Ctrl+3 workspace $ws5
+bindsym $mod+Ctrl+4 workspace $ws6
 
 #####################
 # workspace layout: #
@@ -267,9 +268,34 @@ bindsym $mod+Shift+n exec ~/.config/i3/scripts/empty_workspace
 ## Multimedia Keys
 
 # volume
-bindsym XF86AudioRaiseVolume exec amixer -D pulse sset Master 5%+ && pkill -RTMIN+1 i3blocks
-bindsym XF86AudioLowerVolume exec amixer -D pulse sset Master 5%- && pkill -RTMIN+1 i3blocks
+# bindsym XF86AudioRaiseVolume exec amixer -D pulse sset Master 5%+ && pkill -RTMIN+1 i3blocks
+# bindsym XF86AudioLowerVolume exec amixer -D pulse sset Master 5%- && pkill -RTMIN+1 i3blocks
 # bindsym XF86AudioMute exec pamixer -t && dunstify -h string:x-dunst-stack-tag:mute mute: $(pamixer --get-mute)!
+
+# Command for the status line
+#   ie: i3blocks, i3status
+set $statuscmd i3blocks
+
+# Signal used to update the status line
+#   i3blocks uses SIGRTMIN+10 by default
+#   i3status uses SIGUSR1 by default
+set $statussig SIGRTMIN+10
+
+# pulseaudio-utils settings
+#
+# Symbolic name for sink (numeric index not supported)
+#   Recommended: comment out this setting and omit the -s option to use default sink
+#   List sink names: pacmd list-sinks | awk -F "[<>]" '/^\s+name: <.*>/{print $2}'
+#set $sinkname alsa_output.pci-0000_00_1b.0.analog-stereo
+
+# Using pulseaudio-utils (append "-s $sinkname" without quotes to override default sink)
+bindsym XF86AudioRaiseVolume exec --no-startup-id i3-volume -e 750 -n -t $statuscmd -u $statussig up 5
+bindsym XF86AudioLowerVolume exec --no-startup-id i3-volume -e 750 -n -t $statuscmd -u $statussig down 5
+bindsym XF86AudioMute        exec --no-startup-id i3-volume -e 750 -n -t $statuscmd -u $statussig mute
+bindsym $mod+XF86AudioRaiseVolume exec --no-startup-id i3-volume -e 750 -n -t $statuscmd -u $statussig up 1
+bindsym $mod+XF86AudioLowerVolume exec --no-startup-id i3-volume -e 750 -n -t $statuscmd -u $statussig down 1
+bindsym Caps_Lock exec --no-startup-id ~/.config/i3/scripts/dunst-caps-lock.sh
+bindsym Num_Lock exec --no-startup-id ~/.config/i3/scripts/dunst-num-lock.sh
 
 
 # Pulse Audio controls
@@ -282,16 +308,17 @@ bindsym XF86AudioLowerVolume exec amixer -D pulse sset Master 5%- && pkill -RTMI
 #bindsym XF86AudioMute exec pamixer -t && dunstify -h string:x-dunst-stack-tag:mute mute: $(pamixer --get-mute)!
 
 # gradular volume control
-bindsym $mod+XF86AudioRaiseVolume exec amixer -D pulse sset Master 1%+ && pkill -RTMIN+1 i3blocks
-bindsym $mod+XF86AudioLowerVolume exec amixer -D pulse sset Master 1%- && pkill -RTMIN+1 i3blocks
+# bindsym $mod+XF86AudioRaiseVolume exec amixer -D pulse sset Master 1%+ && pkill -RTMIN+1 i3blocks
+# bindsym $mod+XF86AudioLowerVolume exec amixer -D pulse sset Master 1%- && pkill -RTMIN+1 i3blocks
 
 # mute
 #bindsym XF86AudioMute exec amixer sset Master toggle && killall -USR1 i3blocks
 #mute
-bindsym XF86AudioMute exec pamixer -t && notify-send "mute: $(pamixer --get-mute)"
+# bindsym XF86AudioMute exec pamixer -t && notify-send "mute: $(pamixer --get-mute)"
 
-bindsym XF86AudioPlay exec playerctl play
-bindsym XF86AudioPause exec playerctl pause
+# bindsym XF86AudioPlay exec playerctl play
+bindsym XF86AudioPlay exec playerctl play-pause
+# bindsym XF86AudioPause exec playerctl pause # doesn't exist
 bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
 
@@ -334,6 +361,8 @@ workspace $ws8 output DP-0
 workspace $ws9 output DP-0
 workspace $ws0 output DP-0
 
+# Focus urgnet windows
+focus_on_window_activation focus
 
 exec --no-startup-id flameshot
 exec --no-startup-id copyq
@@ -342,7 +371,15 @@ exec --no-startup-id numlockx on
 exec --no-startup-id discord
 exec --no-startup-id thunderbird
 exec --no-startup-id strawberry
-exec --no-startup-id kmonad ~/.config/kmonad/ducky3108.kbd
+exec --no-startup-id kmonad ~/.config/kmonad/ducky3108.kbd 2>&1 | ts > /tmp/kmonad.log
+exec --no-startup-id i3-msg; exec alacritty --title gping --class alacritty-autostart-gping --command gping 8.8.8.8 1.1.1.1 192.168.1.1
+exec --no-startup-id i3-msg; exec alacritty --title btm   --class alacritty-autostart-btm   --command btm
+# prolly a better way, but i'm too lazy
+for_window [instance="alacritty-autostart-gping"] layout tabbed
+for_window [instance="alacritty-autostart-btm"] layout tabbed
+assign [instance="alacritty-autostart-gping"] $ws5
+assign [instance="alacritty-autostart-btm"] $ws5
+
 # exec --no-startup-id qbittorrent
 
 for_window [title="CopyQ"] floating enable
@@ -513,7 +550,7 @@ client.urgent		    $urgentred	$urgentred	$white		$purple		$yellowbrown
 bar {
 		font pango:MesloLGS Nerd Font 12, FontAwesome 12
 		status_command i3blocks -c ~/.config/i3/i3blocks.conf
-	    	position bottom
+	    	position top
 #	    	i3bar_command i3bar --transparency
 # it could be that you have no primary display set: set one (xrandr --output <output> --primary)
 # reference: https://i3wm.org/docs/userguide.html#_tray_output
@@ -577,6 +614,15 @@ strip_workspace_numbers yes
 
 bindsym $mod+d exec rofi -modi drun -show drun \
 		-config ~/.config/rofi/rofidmenu.rasi
+
+# bindsym $mod+c exec rofi -show calc -modi calc -no-show-match -no-sort -calc-command "echo -n '{result}' | xclip" -config ~/.config/rofi/rofidmenu.rasi
+bindsym $mod+c exec rofi -show calc -modi calc -no-show-match -no-sort -hint-welcome "Ctrl+Return to paste" -calc-command 'xdotool type --clearmodifiers "{result}"' -config ~/.config/rofi/rofidmenu.rasi
+# -hint-welcome -hint-result
+
+
+# bindsym $mod+Ctrl+e exec rofi -modi "emoji:rofimoji" -show emoji -config ~/.config/rofi/rofikeyhint.rasi
+# bindsym $mod+Shift+v exec rofi -modi "emoji:rofimoji --action copy" -show emoji -config ~/.config/rofi/rofikeyhint.rasi
+bindsym $mod+Shift+v exec rofimoji --selector-args "-config ~/.config/rofi/rofikeyhint.rasi "  --prompt "alt+c copy | alt+<num> insert recent | alt+u unicode"
 
 #bindsym F9 exec rofi -modi drun -show drun \
 #		-config ~/.config/rofi/rofidmenu.rasi
